# pydantic-converter

./: Makefile  README.md  pyproject.toml
.github/workflows/: linters.yaml  publish.yaml  pytest.yaml
src/pydantic_converter/: __init__.py  __main__.py  cli.py  marker.py
tests/: output.ts  sample.py
